# LCSA-LENGTHS

./: CMakeLists.txt  README.md
executables/: CMakeLists.txt  main.cpp
includes/lcsa/: LCSALENGTHS.hpp
